cmake_minimum_required(VERSION 3.22)
project(study_primer)

set(CMAKE_CXX_STANDARD 20)

add_executable(5.17 5/5.17.cpp)
add_executable(9.4 9/9.4.cpp)
add_executable(9.5 9/9.5.cpp)
add_executable(9.10 9/9.10.cpp)
add_executable(9.14 9/9.14.cpp)
add_executable(9.26 9/9.26.cpp)
add_executable(oj19 oline_judge/oj19.cpp)
add_executable(oj18 oline_judge/oj18.cpp)
add_executable(oj16 oline_judge/oj16.cpp)
add_executable(main main.cpp)
add_executable(oj20 oline_judge/oj20.cpp)
add_executable(oj149 oline_judge/oj149.cpp)
add_executable(oj135 oline_judge/oj135.cpp)
add_executable(1_1 acm/1_1.cpp)
add_executable(305 oline_judge/305.cpp)
add_executable(oj23 oline_judge/oj23.cpp)
add_executable(oj15 oline_judge/oj15.cpp)
add_executable(oj24 oline_judge/oj24.cpp)
add_executable(oj22 oline_judge/oj22.cpp)
add_executable(oj21 oline_judge/oj21.cpp)
add_executable(oj39 oline_judge/oj39.cpp)
add_executable(128 oline_judge/128.cpp)
add_executable(oj26 oline_judge/oj26.cpp)
add_executable(127 oline_judge/127.cpp)
add_executable(757 oline_judge/757.cpp)